--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -94,7 +94,7 @@
             </div>
             <div class="row" @flyInOut *ngIf="isLifeColonyShowing">
                 <mat-divider></mat-divider>
-                <button mat-button>
+                <button mat-button routerLink="notable-nimbats">
                     <h6 style="text-align:left">
                         <mat-icon style="size:110%;vertical-align:bottom;">diamond</mat-icon> Notable Nimbats
                     </h6>
