--- a/src/app/notable-nimbats/notable-nimbats.component.html
+++ b/src/app/notable-nimbats/notable-nimbats.component.html
@@ -1,1 +1,116 @@
-<p>notable-nimbats works!</p>
+<div class="container-fluid">
+    <mat-card>
+        <mat-card-title>
+            <h3>Notable Nimbats</h3>
+        </mat-card-title>
+        <mat-card-content>
+            <h5 class="notes">"During my time here, I've come across a number of Nimbats that are considered to be
+                "popular," in the words of other members of the Colony. For whatever reason, these Nimbats are known
+                beyond the Flights they belong to, despite there being so many of them. I've met a few in person, but
+                most tend to be harder to track down."</h5>
+            <mat-divider></mat-divider><br>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="fidget" id="fidget" (mousemove)="onMouseMove('fidget', $event)"></div>
+                        <div style="text-align:right;">Art by Dean Dodrill</div>
+                    </div>
+                    <div class="col">
+                        <h4 style="text-align:left;">Fidget</h4>
+                        <h6 style="text-align:left;" class="notes">"Currently, Fidget's location is not known. She seems
+                            to still be with Dust, who in a way is her Visitant. Fidget is the first Nimbat that our
+                            society had ever come in contact with, and her and her species piqued our collective
+                            interest. She was the guardian of the ancient sword that Dust now wields, and originally
+                            joined him on his journey because he wouldn't return it to her. Though, I've heard plenty of
+                            credible rumors indicating that the sword is sentient, and only travels with Dust because he
+                            allows it."</h6>
+                        <h6 style="text-align:left">Current Flight: Flightless</h6>
+                        <h6 style="text-align:left">Magical Prowess: Clairvoyance, described as "feeling items".</h6>
+                        <h6 style="text-align:left">Age: Unknown, but had been guarding Ahrah for at least 200 years.
+                        </h6>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col">
+                        <div class="lyra" id="lyra" (mousemove)="onMouseMove('lyra', $event)"></div>
+                        <div style="text-align:right;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmaaia_art&sa=D&sntz=1&usg=AOvVaw01W0vndSt4CJqF0rapKtBM">@Maaia_ART</a></div>
+                    </div>
+                    <div class="col">
+                        <h4 style="text-align:left;">Lyra Rathmanner</h4>
+                        <h6 style="text-align:left;" class="notes">"Lyra is a spunky, sassy, headstrong little Nimbat.
+                            She may only be two feet tall by default, but she can and will tell you what to do. She
+                            talks about her Visitant quite a bit, a student by the name of Finn, who she reports she
+                            more or less became his Advocate before he became her Visitant, latching onto him when they
+                            first met. She often spends time outside of the Colony with him, acting more or less as his
+                            companion. I've yet to meet this 'Finn', as she says he's quite busy and can't make it to
+                            the colony often."</h6>
+                        <h6 style="text-align:left">Current Flight: Proliferation</h6>
+                        <h6 style="text-align:left">Magic Prowess: Autoamelioration, morphing</h6>
+                        <h6 style="text-align:left">Age: 20</h6>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col">
+                        <div class="frequency" id="frequency" (mousemove)="onMouseMove('frequency', $event)"></div>
+                        <div style="text-align:right;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmystery_fuzz&sa=D&sntz=1&usg=AOvVaw2HAHjYNpzC5LQDvFV8q9eT">MysteryFuzz</a></div>
+                    </div>
+                    <div class="col">
+                        <h4 style="text-align:left;">Frequency</h4>
+                        <h6 style="text-align:left;" class="notes">"Frequency is one of the larger Nimbats in the Colony, sporting around 3.5 to 4 feet. She’s jovial, playful, and loud. She has played attendee for Visitants before, although she isn’t a true Advocate as of yet, given that she often travels out of the Colony to tend to other things. She is one of the most enigmatic Nimbats described to me, apparently having been born outside of the Colony. Her actual history is not spoken of.”</h6>
+                        <h6 style="text-align:left">Current Flight: Protection</h6>
+                        <h6 style="text-align:left">Magic Prowess: Hyper-acoustic emission.</h6>
+                        <h6 style="text-align:left">Age: 25</h6>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col">
+                        <div class="maia" id="maia" (mousemove)="onMouseMove('maia', $event)"></div>
+                        <div style="text-align:right;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">WREN</a></div>
+                    </div>
+                    <div class="col">
+                        <h4 style="text-align:left;">Maia</h4>
+                        <h6 style="text-align:left;" class="notes">“Maia is a notoriously elusive Nimbat, making observing her slightly more difficult. What is known about her is that she did not originate from the colonies. She is rumored to come from a community far, far to the north and migrated here almost a century ago. Her demeanor has been recorded as being somewhat reserved, focused but amenable (or maybe it’s tolerant) to the antics of others. It has been noted that she can be rather abrasive with her pragmatism. Reconnaissance suggests she doesn’t take an active role with vistants not explicitly related to her field of study. Working as an apothecary who specializes in pre and post-natal care for the colony, it is suspected that she is the most consulted individual when it comes to healthcare needs. Some theorize that she might be a seer due to her failing eyesight and uncanny ability to diagnose her patients with little more than a passing glance, but these reports have not been confirmed.”</h6>
+                        <h6 style="text-align:left">Current Flight: Populace</h6>
+                        <h6 style="text-align:left">Magic Prowess: Runic Enchantment, Phytomancy</h6>
+                        <h6 style="text-align:left">Age: 230</h6>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col">
+                    <div class="nohra" id="nohra" (mousemove)="onMouseMove('nohra', $event)"></div>
+                    <div style="text-align:right;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2FEclipseMocha&sa=D&sntz=1&usg=AOvVaw3ECMHs5OcCCWy3dcnH5vnN">Mocha Eclipse</a></div>
+                    </div>
+                    <div class="col">                        
+                        <h4 style="text-align:left;">Nohra</h4>
+                        <h6 style="text-align:left;" class="notes"> "A young newcomer to the Colony from what I've noticed. This silver coloured Nimbat and I have managed to have a few short chats now and again when I've seen him returning to the colony with books and other little shiny objects and trinkets. Somewhat quiet and yet articulate, he shares the same curiosity that most Nimbat in Flight Progression seem to share.</h6>
+                            <h6 style="text-align:left;" class="notes">    He seems to be quite an adept spellcaster, which might have led to why he chooses to leave the Colony frequently. From observation alone, I've noticed that the Nimbat seems to be quite adept in forms of Cryokinesis and Electrokinesis. Almost to the point of being able to manipulate the weather around him. Every time I've passed by him, I always feel as if the temperature around me has dropped.</h6>
+                                <h6 style="text-align:left;" class="notes">    Curiously enough, in my small talks with him he's mentioned to me that he wasn't always a Nimbat? If this is true, this changes my previous notes I've made in regards to never having met one; alas he seemed quite busy and I was unable to inquire further. Although I had noticed some small abnormalities to him, including small brown horns, a feather-like tail and other draconic features. A curious creature to be sure, one worth trying to try to talk to again in the future..."</h6>
+                        <h6 style="text-align:left">Current Flight: Progression</h6>
+                        <h6 style="text-align:left">Magic Prowess: Weather Manipulation, Shapeshifting, Ice/Wind/Electrical magic affinity</h6>
+                        <h6 style="text-align:left">Age: Looks to be roughly in his early 20's</h6>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col">
+                    <div class="wavey" id="wavey" (mousemove)="onMouseMove('wavey', $event)"></div>
+                    <div style="text-align:right;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">WREN</a></div>
+                    </div>
+                    <div class="col">                        
+                        <h4 style="text-align:left;">Wavelength</h4>
+                        <h6 style="text-align:left;" class="notes">“Wavelength appears to be almost entirely like his ‘predecessor’ Frequency: nearing 4 feet tall with an uncommonly trained physique. According to his personal account, a freak confluence of transformative magic forever changed him from a heroic musketeer equine into this newfound Nimbat life. He seems to have spent a lot of time outside of the Colony after that chance encounter to find himself again and has since settled on making the best of this newfound opportunity. Relying on his training and newfound powers, he has recently sworn to be one of the Colony’s resolute shields to defend those that he loves.”</h6>
+                        <h6 style="text-align:left">Current Flight: Protection</h6>
+                        <h6 style="text-align:left">Magic Prowess: Augmentative performance sonomancy, weapon conjuration.</h6>
+                        <h6 style="text-align:left">Age: 25</h6>
+                    </div>
+                </div>
+                <hr>
+            </div>
+
+        </mat-card-content>
+    </mat-card>
+</div>
