fix text and spacing in bouncy bats

--- a/src/app/notable-nimbats/notable-nimbats.component.html
+++ b/src/app/notable-nimbats/notable-nimbats.component.html
@@ -25,7 +25,7 @@
                             credible rumors indicating that the sword is sentient, and only travels with Dust because he
                             allows it."</h6>
                         <h6 style="text-align:left">Current Flight: Flightless</h6>
-                        <h6 style="text-align:left">Magical Prowess: Clairvoyance, described as "feeling items".</h6>
+                        <h6 style="text-align:left">Magic Prowess: Clairvoyance, described as "feeling items".</h6>
                         <h6 style="text-align:left">Age: Unknown, but had been guarding Ahrah for at least 200 years.
                         </h6>
                     </div>
