--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -25,9 +25,9 @@
             </div>
         </div>
         <mat-divider></mat-divider>
-        <div class="container-fluid">
+        <div class="container-fluid" (mouseover)="isColonyCultureShowing = true" (mouseleave)="isColonyCultureShowing = false">
             <div class="row">
-                <button mat-button (click)="isColonyCultureShowing = !isColonyCultureShowing">
+                <button mat-button routerLink="colony-culture">
                     <h5>Colony Culture<mat-icon class="icon-display" *ngIf="!isColonyCultureShowing; else noCulture">
                             keyboard_arrow_down</mat-icon>
                         <ng-template #noCulture>
@@ -81,9 +81,9 @@
             </div>
         </div>
         <mat-divider></mat-divider>
-        <div class="container-fluid">
+        <div class="container-fluid" (mouseover)="isLifeColonyShowing = true" (mouseleave)="isLifeColonyShowing = false">
             <div class="row">
-                <button mat-button (click)="isLifeColonyShowing = !isLifeColonyShowing">
+                <button mat-button routerLink="life-in-the-colony">
                     <h5>Life in the Colony<mat-icon class="icon-display" *ngIf="!isLifeColonyShowing; else noLife">
                             keyboard_arrow_down</mat-icon>
                         <ng-template #noLife>
@@ -110,9 +110,9 @@
             </div>
         </div>
         <mat-divider></mat-divider>
-        <div class="container-fluid">
+        <div class="container-fluid" (mouseover)="isVisitantsShowing = true" (mouseleave)="isVisitantsShowing = false">
             <div class="row">
-                <button mat-button (click)="isVisitantsShowing = !isVisitantsShowing">
+                <button mat-button routerLink="visitants">
                     <h5>Visitants<mat-icon class="icon-display" *ngIf="!isVisitantsShowing; else noVisitants">
                             keyboard_arrow_down</mat-icon>
                         <ng-template #noVisitants>
