unbounced my pictures (frick you finn)

--- a/src/app/notable-nimbats/notable-nimbats.component.html
+++ b/src/app/notable-nimbats/notable-nimbats.component.html
@@ -12,7 +12,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <div class="fidget" id="fidget" (mousemove)="onMouseMove('fidget', $event)"></div>
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/notable-nimbats/fidget.png"></div>
                         <div style="text-align:right;">Art by Dean Dodrill</div>
                     </div>
                     <div class="col">
@@ -33,7 +33,7 @@
                 <hr>
                 <div class="row">
                     <div class="col">
-                        <div class="lyra" id="lyra" (mousemove)="onMouseMove('lyra', $event)"></div>
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/notable-nimbats/lyra.jpg"></div>
                         <div style="text-align:right;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmaaia_art&sa=D&sntz=1&usg=AOvVaw01W0vndSt4CJqF0rapKtBM">@Maaia_ART</a></div>
                     </div>
                     <div class="col">
@@ -53,7 +53,8 @@
                 <hr>
                 <div class="row">
                     <div class="col">
-                        <div class="frequency" id="frequency" (mousemove)="onMouseMove('frequency', $event)"></div>
+                        
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/notable-nimbats/frequency-notable.png"></div>
                         <div style="text-align:right;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmystery_fuzz&sa=D&sntz=1&usg=AOvVaw2HAHjYNpzC5LQDvFV8q9eT">MysteryFuzz</a></div>
                     </div>
                     <div class="col">
@@ -67,7 +68,8 @@
                 <hr>
                 <div class="row">
                     <div class="col">
-                        <div class="maia" id="maia" (mousemove)="onMouseMove('maia', $event)"></div>
+                        
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/notable-nimbats/maia.png"></div>
                         <div style="text-align:right;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">WREN</a></div>
                     </div>
                     <div class="col">
@@ -81,7 +83,8 @@
                 <hr>
                 <div class="row">
                     <div class="col">
-                    <div class="nohra" id="nohra" (mousemove)="onMouseMove('nohra', $event)"></div>
+                        
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/notable-nimbats/nohra.png"></div>
                     <div style="text-align:right;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2FEclipseMocha&sa=D&sntz=1&usg=AOvVaw3ECMHs5OcCCWy3dcnH5vnN">Mocha Eclipse</a></div>
                     </div>
                     <div class="col">                        
@@ -97,7 +100,8 @@
                 <hr>
                 <div class="row">
                     <div class="col">
-                    <div class="wavey" id="wavey" (mousemove)="onMouseMove('wavey', $event)"></div>
+                        
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/notable-nimbats/wavelength.png"></div>
                     <div style="text-align:right;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">WREN</a></div>
                     </div>
                     <div class="col">                        
