--- a/src/app/usage-guidelines/usage-guidelines.component.html
+++ b/src/app/usage-guidelines/usage-guidelines.component.html
@@ -7,17 +7,14 @@
             <h5>As of right now, NimbatColony.info is the passion project of two Nimbat enthusiasts— Finn
                 (MurrchMadness), and Frequency (AmpFrequency). This is meant to be used as a setting for story writing,
                 art, and roleplay, and we're hoping for it to become a larger conglomerate of creators someday.</h5>
-            <div class="container-fluid">
-                <mat-card class="inner">
-                    <h5>If you'd like to:</h5>
-                    <h5>Develop lore or assist with development in general,</h5>
-                    <h5>Write a story using the setting,</h5>
-                    <h5>Add visual elements of the setting to your social media profiles (including but not limited to
-                        F-List, Twitter, and Discord),</h5>
-                    <h5>Donate??</h5>
-                </mat-card>
-            </div>
-
+            <hr>
+            <h5>If you'd like to:</h5>
+            <h5>Develop lore or assist with development in general,</h5>
+            <h5>Write a story using the setting,</h5>
+            <h5>Add visual elements of the setting to your social media profiles (including but not limited to
+                F-List, Twitter, and Discord),</h5>
+            <h5>Donate??</h5>
+            <hr>
             <h5>Please send us a message anywhere listed below. The first line of your message should reference this
                 site, just so we know where you're coming from! After we talk a bit and learn about what you'd be doing
                 with our work, we'll green-light it if we feel it's in line with the things we're hoping to see this
@@ -42,23 +39,31 @@
                     <div class="col">
                         <h5 style="text-align:center">Send a DM or @ to:</h5>
                         <h5 style="text-align:center"><a href="https://twitter.com/NimbatColony">@NimbatColony</a></h5>
-                        <h5 style="text-align:center"><a href="https://twitter.com/MurrchMadness">@MurrchMadness</a></h5>
+                        <h5 style="text-align:center"><a href="https://twitter.com/MurrchMadness">@MurrchMadness</a>
+                        </h5>
                         <h5 style="text-align:center"><a href="https://twitter.com/AmpFrequency">@AmpFrequency</a></h5>
                     </div>
                     <div class="col">
                         <h5 style="text-align:center">Send a message to:</h5>
                         <h5 style="text-align:center">MurrchMadness#3634</h5>
                         <h5 style="text-align:center">Frequency#6937</h5>
-                        <h5 style="text-align:center">Or join the <a href="https://www.google.com/url?q=https%3A%2F%2Fdiscord.gg%2FCTjE4hVErm&sa=D&sntz=1&usg=AOvVaw0-cg6BDECHlttlnwSnnWGz">Discord</a>!</h5>
+                        <h5 style="text-align:center">Or join the <a
+                                href="https://www.google.com/url?q=https%3A%2F%2Fdiscord.gg%2FCTjE4hVErm&sa=D&sntz=1&usg=AOvVaw0-cg6BDECHlttlnwSnnWGz">Discord</a>!
+                        </h5>
                     </div>
                     <div class="col">
                         <h5 style="text-align:center">Send a Note to:</h5>
-                        <h5 style="text-align:center"><a href="https://www.google.com/url?q=https%3A%2F%2Fwww.f-list.net%2Fc%2Fthe%2520nimbat%2520colony&sa=D&sntz=1&usg=AOvVaw1Sub3lhKkIgGE_fUHeKqQS">The Nimbat Colony</a></h5>
-                        <h5 style="text-align:center"><a href="https://www.google.com/url?q=https%3A%2F%2Fwww.f-list.net%2Fc%2Fyour%2520nimbat%2520advocate&sa=D&sntz=1&usg=AOvVaw3Qwz2hh2TR7KSQ_Vw3jIB1">Your Nimbat Advocate</a></h5>
+                        <h5 style="text-align:center"><a
+                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.f-list.net%2Fc%2Fthe%2520nimbat%2520colony&sa=D&sntz=1&usg=AOvVaw1Sub3lhKkIgGE_fUHeKqQS">The
+                                Nimbat Colony</a></h5>
+                        <h5 style="text-align:center"><a
+                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.f-list.net%2Fc%2Fyour%2520nimbat%2520advocate&sa=D&sntz=1&usg=AOvVaw3Qwz2hh2TR7KSQ_Vw3jIB1">Your
+                                Nimbat Advocate</a></h5>
                     </div>
                     <div class="col">
                         <h5 style="text-align:center">Send an Email to:</h5>
-                        <h5 style="text-align:center"><a href="mailto:NimbatColony@gmail.com">NimbatColony@gmail.com</a></h5>
+                        <h5 style="text-align:center"><a href="mailto:NimbatColony@gmail.com">NimbatColony@gmail.com</a>
+                        </h5>
                     </div>
                 </div>
             </div>
@@ -74,22 +79,30 @@
             <div class="row justify-content-center">
                 <div class="col-5">
                     <h4 style="text-align:end">Finn Heartlin</h4>
-                    <h6 style="text-align:end"><a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmurrchmadness&sa=D&sntz=1&usg=AOvVaw1QssskujCvtqDYNyT9jKTR">@MurrchMadness</a></h6>
+                    <h6 style="text-align:end"><a
+                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmurrchmadness&sa=D&sntz=1&usg=AOvVaw1QssskujCvtqDYNyT9jKTR">@MurrchMadness</a>
+                    </h6>
                     <h6 style="text-align:end">Lead Designer</h6>
                     <h5 style="text-align:end">Finn's a communications student based out of New England, </h5>
                     <h5 style="text-align:end">with a background in screenwriting and graphic design.</h5>
                 </div>
                 <div class="col-1">
-                    <div class="finn" id="finn" (mousemove)="onMouseMove('finn', $event)"></div>
-                    <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fbastika%2F&sa=D&sntz=1&usg=AOvVaw0iJsgSpXHqOe1jo-invm_Y">Bastika</a></small></h6>
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/developer-profiles/finn.jpg"></div>
+                    <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a
+                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fbastika%2F&sa=D&sntz=1&usg=AOvVaw0iJsgSpXHqOe1jo-invm_Y">Bastika</a></small>
+                    </h6>
                 </div>
                 <div class="col-1">
-                    <div class="frequency" id="frequency" (mousemove)="onMouseMove('frequency', $event)"></div>
-                    <p><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fhotcoffeecat%2F&sa=D&sntz=1&usg=AOvVaw2yA-P8DPQBCb_MKXPOkaWn">HotCoffeeCat</a></small></p>
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/developer-profiles/frequency.png"></div>
+                    <p><small style="font-size:0.75rem;">Art by <a
+                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.furaffinity.net%2Fuser%2Fhotcoffeecat%2F&sa=D&sntz=1&usg=AOvVaw2yA-P8DPQBCb_MKXPOkaWn">HotCoffeeCat</a></small>
+                    </p>
                 </div>
                 <div class="col-5">
                     <h4>Frequency</h4>
-                    <h6><a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fampfrequency&sa=D&sntz=1&usg=AOvVaw02q19DabwsFBehH9gteubi">@AmpFrequency</a></h6>
+                    <h6><a
+                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fampfrequency&sa=D&sntz=1&usg=AOvVaw02q19DabwsFBehH9gteubi">@AmpFrequency</a>
+                    </h6>
                     <h6>Lead Writer</h6>
                     <h5>Frequency's a biology student from the Midwest,</h5>
                     <h5> with further studies in anthropology.</h5>
@@ -98,24 +111,32 @@
             <div class="row">
                 <div class="col-5">
                     <h4 style="text-align:end">Takeo</h4>
-                    <h6 style="text-align:end"><a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">@tak_eo</a></h6>
+                    <h6 style="text-align:end"><a
+                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">@tak_eo</a>
+                    </h6>
                     <h6 style="text-align:end">Lead Artist</h6>
                     <h5 style="text-align:end">Part-time artist; Full-time problem.</h5>
                 </div>
                 <div class="col-1">
-                    <div class="takeo" id="takeo" (mousemove)="onMouseMove('takeo', $event)"></div>
-                    <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">Takeo</a></small></h6>
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/developer-profiles/takeo.png"></div>
+                    <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a
+                                href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">Takeo</a></small>
+                    </h6>
                 </div>
                 <div class="col-1">
-                    <div class="arcfire" id="arcfire" (mousemove)="onMouseMove('arcfire', $event)"></div>
-                    <h6><small style="font-size:0.75rem;">Art by <a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmaftydoesart&sa=D&sntz=1&usg=AOvVaw08j9m0Z2Bu6HjmGyocOZp6">Mafty</a></small></h6>
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/developer-profiles/arcfire.png"></div>
+                    <h6><small style="font-size:0.75rem;">Art by <a
+                                href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmaftydoesart&sa=D&sntz=1&usg=AOvVaw08j9m0Z2Bu6HjmGyocOZp6">Mafty</a></small>
+                    </h6>
                 </div>
                 <div class="col-5">
                     <h4>Arcfire</h4>
-                    <h6><a href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2FArcfireFox&sa=D&sntz=1&usg=AOvVaw3FDfgw0XzOgWV_r4316WiI">@ArcfireFox</a></h6>
+                    <h6><a
+                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2FArcfireFox&sa=D&sntz=1&usg=AOvVaw3FDfgw0XzOgWV_r4316WiI">@ArcfireFox</a>
+                    </h6>
                     <h6>Lead Web Developer</h6>
                     <h5>Foxy menace stuck in the Southwest,</h5>
-                    <h5>  who happens to develop websites.</h5>
+                    <h5> who happens to develop websites.</h5>
                 </div>
             </div>
         </div>
