--- a/src/app/colony-chronicles/colony-chronicles.component.html
+++ b/src/app/colony-chronicles/colony-chronicles.component.html
@@ -7,8 +7,12 @@
         <h5>Below you'll find a collection of short stories written by the NimbatColony team. These are made possible by our lovely subscribers on Patreon; Members of the Peon tier and above get access to some more risque stories, while more family friendly stories will be here for free.</h5>
     </mat-card-content>
     <mat-divider></mat-divider><br>
+    <h5><a routerLink="/thou-have-yet-to-become-me">Thou Have Yet To Become Me</a></h5>
+    <h6><i>“If the one that’s supposed to keep you safe can’t even be trusted, how do you go to sleep at night? How do you look at your world, imagining a thousand ways of how it’d all burn down when the veil was lifted. The best you can do for now is to keep everyone feeling hopeful, just like you were taught.”</i></h6>
+        Written on 10/1/2022, by Frequency. This story is free for all.
+        <hr>
     <h5><a routerLink="/caught-up-in-your-wheeling-dealing">Caught Up In Your Wheeling-Dealing</a></h5>
-    <h6><i>After coming out of a long day’s worth of work in the Colony, you were approached by someone who seemed more than thankful to see you busting your butt for a good cause. Maybe she adored generous, hard-working people like herself. Or maybe she saw something on you that she wanted a taste of. A pairing between Anon and Rosmerta, the Proliferation Elder!</i></h6>
-        This story is 18+ NSFW, published on 7/9/22! It can be found on Patreon, and also here! <b>This NSFW story is free for all.</b>
+    <h6><i>“After coming out of a long day’s worth of work in the Colony, you were approached by someone who seemed more than thankful to see you busting your butt for a good cause. Maybe she adored generous, hard-working people like herself. Or maybe she saw something on you that she wanted a taste of. A pairing between Anon and Rosmerta, the Proliferation Elder!”</i></h6>
+        Written on 7/9/2022, by Frequency. This <b>18+ NSFW</b> story is free for all.
 </mat-card>
 </div>
