--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid update">
     <div class="row">
         <div class="col-1">
-            <button mat-button (click)="toggleSidenav()"><img style="width: 40px; height: 100%"
+            <button id="menu-button" mat-button (click)="toggleSidenav()"><img style="width: 40px; height: 100%"
                     src="assets/newcomer mark.png"></button>
         </div>
         <div class="col-11">
